@@ -7,6 +7,8 @@ Changes in 4.0.7
 * New tag: <txp:rsd /> specifies the Really Simple Discovery endpoint for XML-RPC clients
 * New tag: <txp:variable />
 * New tag: <txp:if_variable>
+* New tags: <txp:if_first_section>, <txp:if_last_section>
+* New tags: <txp:if_first_category>, <txp:if_last_category>
 * Changed tag: <txp:article /> can be used as a container tag
 * Changed tag: <txp:article /> allows new attributes 'wraptag' and 'break'
 * Changed tag: <txp:article_custom /> can be used as a container tag
